resolve sonar issues